--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -22,6 +22,7 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <!-- Empty state layout -->
+
     <LinearLayout
         android:id="@+id/layoutEmptyState"
         android:layout_width="match_parent"
@@ -30,13 +31,15 @@
         android:orientation="vertical"
         android:padding="16dp"
         android:visibility="gone"
+        app:layout_anchor="@+id/swipeRefresh"
+        app:layout_anchorGravity="center"
         tools:visibility="visible">
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_empty_feed"
-            android:contentDescription="@string/empty_feed" />
+            android:contentDescription="@string/empty_feed"
+            android:src="@drawable/ic_empty_feed" />
 
         <TextView
             android:layout_width="wrap_content"
